# sample-creators

./: .gitignore  Dockerfile  README.md  app.py  b30_aja_sputter_rates.csv  backend.py  cloudbuild.yaml  config.py  coords_36sample.txt  pyproject.toml
ScopeFoundryHW/giwaxs_bar_creator/: change-angle.py  rga-carrier-creator.ui
beamline_data_toolkit/sample_tracker/: __init__.py  model.py  sample_tracker.py
routes/: als_shared.py  b30_sputter.py  giwaxs.py  new-api-notes  rga.py  shared.py
static/css/: style.css
static/js/: b30_sputter.js  giwaxs.js  rga.js  shared.js
templates/: b30_sputter.html  base.html  giwaxs.html  index.html  rga.html
