[project]
name = "als-data-entry-apps"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask>=3.1.3",
    "nano-crucible",
    "pandas>=3.0.2",
    "python-dotenv>=1.2.2",
]

[tool.uv.sources]
nano-crucible = { git = "https://github.com/MolecularFoundryCrucible/nano-crucible.git", rev = "dev" }
